--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-flash": "~0.1.1",
     "connect-mongo": "~2.0.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "cross-env": "~5.2.0",
     "csurf": "1.10.0",
     "dotenv": "~8.0.0",
@@ -35,6 +36,7 @@
     "moment-timezone": "^0.5.26",
     "mongoose": "~5.5.11",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "passport": "~0.4.0",
     "passport-local": "~1.0.0",
     "pm2": "~3.5.0",
