--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "~5.5.11",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "passport": "~0.4.0",
     "passport-local": "~1.0.0",
     "pm2": "~3.5.0",
