--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dotenv": "~8.0.0",
     "express": "~4.17.0",
     "express-session": "~1.16.1",
-    "helmet": "~3.18.0",
+    "helmet": "^3.21.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "~3.0.0",
     "moment-timezone": "^0.5.26",
@@ -42,9 +42,11 @@
     "passport-local": "~1.0.0",
     "pm2": "~3.5.0",
     "pug": "~2.0.3",
+    "socket.io": "^2.3.0",
     "validator": "^11.1.0",
     "view-helpers": "~0.2.0",
-    "winston": "~3.2.1"
+    "winston": "~3.2.1",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "babel-eslint": "~10.0.1",
